src/test/ui/hrtb/hrtb-debruijn-in-receiver.stderr
error[E0499]: cannot borrow `foo` as mutable more than once at a time
  --> $DIR/hrtb-debruijn-in-receiver.rs:27:5
   |
LL |     foo.insert();
   |     --- first mutable borrow occurs here
LL |     foo.insert(); //~ ERROR cannot borrow
   |     ^^^ second mutable borrow occurs here
LL | }
   | - first borrow ends here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
